# yolov5_cpp_openvino

./: README.md  dock.py  rat.yaml  save_data.py  train.py  yolov5l.yaml
cvmart_competition/: make_dataset.py  read_data.py
cvmart_competition/openvino_cpp_code/: cmakelist.txt  cov.txt  ji.cpp
demo/: CMakeLists.txt  detector.cpp  detector.h  main.cpp
demo/res/: yolov5s.xml
openvino_cpp_code/: docker.txt  my_detector.cpp  my_detector.h
